Update experiment about GC G1 pause time